--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -9,6 +9,6 @@ location: "Ankara, Turkey"
 ---
 I have worked with swarm robotics during my recent internship by exploiting ROS frame work. Inorder to run either simulation and robots commmand , first a ROS package should be created. Using zsh or bash commands in Ubunto. was working in the simulation environment of ROS. this task included altering variables of the simulation through out the yml files. In the next steps the algorithm for randomizing the initial position of drones was achieved. The main algorithm for drones to keep moving was flocking algorithm, though it's dynamic could have achieved by various paterns with implemeting the correspond python code. Here is a sample video of simulation of the drones trying to perform flocking algorithm:
 
-<video src="../images/flocking.mp4" alt="simulation">
+<video src="../images/flocking.mp4" alt="simulation" width="320" height="240" controls></video>
 
 Additionally, I made another ROS pocket for the robots behavior in the real environment. The drones were basic robots working with colaboration of arduino and raspberry pi boards ( due to limitation of ). Xbee module was implemented inorder to organize networking connection between robots. Robots behaviors and commands were controled with rostopics. to be precise, to perform a simple task of moving a robot from one point to the desired destination, coordinates were subscribed by a node and alternatively the error vector was obtained by these received data. the error vector gets published and correspondigly another ros node  which is resposible for converting the linear velocity to angular velocity, subscribes the message. final data are published to DC motors.
