--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -1,13 +1,11 @@
 ---
-title: "Tutorial 1 on Relevant Topic in Your Field"
+title: "Neural Networks & Deep Learning"
 collection: talks
 type: "Tutorial"
 permalink: /talks/2013-03-01-tutorial-1
 venue: "UC-Berkeley Institute for Testing Science"
-date: 2013-03-01
-location: "Berkeley CA, USA"
+date: 2023-03-01
+location: #"Berkeley CA, Iran"
 ---
 
-[More information here](http://exampleurl.com)
-
-This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+During my course work of Deep Learning I gained auto tremendous expereince of neural nets and their vitality for classification matters. Moreover, I got familiar with generative models like auto encoders, variational auto encoders and GAN.
