--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -1,7 +1,7 @@
 ---
 title: "Neural Networks & Deep Learning"
 collection: talks
-type: "Tutorial"
+type: ""
 permalink: /talks/2013-03-01-tutorial-1
 venue: "UC-Berkeley Institute for Testing Science"
 date: 2023-03-01
