--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -8,3 +8,13 @@ date: 2014-02-01
 location: "Tehran, Iran"
 ---
 
+As a junior mechanical engineer, I designed and assembled mechanisms such as  sorters and gates for different parts which are involved in the final product of the company. Furtheremore, I developed multiple codes by in order to control servomotors, sensors, actuator.
+
+Specifically I have designed pushers mechnisms using linear actuator to place certain parts in the insulin pen. which demanded high pushing forces. In order to control the the actuators movement, L298N motor driver was utilized. the actuator was stablized inside a container which was fixed using aluminium profiles. A cone-shaped guide component was used at tip of the actuator to guide the part to be oriented in a vertical pose while getting pushed to the pen.
+
+<video src="../images/CC_Pusher.mp4" alt="simulation" width="640" height="480" align="right" controls></video>
+
+
+Additionally, a relevant gate was designed with acrylic glass to sort the gears in a way that either rings share the same oring. A digital servo motor was used to move the arms of this 1 DOF gripper. Aluminium profiles was used to stablize the gripper as well. 
+
+<video src="../images/gripper.mp4" alt="simulation" width="640" height="480" align="right" controls></video>
