--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -1,7 +1,7 @@
 ---
 title: "Actuators and Grippers"
 collection: talks
-type: "Talk"
+type: ""
 permalink: /talks/2014-02-01-talk-2
 venue: "Pinjection Medical Industries"
 date: 2014-02-01
