--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -7,15 +7,15 @@ venue: "Middle East Technical University"
 date: 2023-07-01
 location: "Ankara, Turkey"
 ---
-I have worked with swarm robotics during my recent internship by exploiting ROS frame work. Inorder to run either simulation and robots commmand , first a ROS package should be created. Using zsh or bash commands in Ubunto. was working in the simulation environment of ROS. this task included altering variables of the simulation through out the yml files. In the next steps the algorithm for randomizing the initial position of drones was achieved. The main algorithm for drones to keep moving was flocking algorithm, though it's dynamic could have achieved by various paterns with implemeting the correspond python code. Here is a sample video of simulation of the drones trying to perform flocking algorithm:
+I have worked with swarm robotics during my recent internship by exploiting the ROS framework. In order to run either the simulation or control the robots' behavior, first a ROS package should be created. Using zsh or bash commands in Ubuntu, we can display the simulation environment of ROS. This task included altering the variables of the simulation throughout the YML files. In the next steps, the algorithm for randomizing the initial position of drones was redesigned. The main algorithm for drones to keep moving was the flocking algorithm, though drones' dynamic acts could have been controlled by various patterns implementing the corresponding Python code. Here is a sample video of the drone's simulation trying to converge with the help of the flocking algorithm.
 
 <video src="../images/flocking.mp4" alt="simulation" width="640" height="480" align="right" controls></video>
 
 
 
+===
 
-
-Additionally, I made another ROS pocket for the robots behavior in the real environment. The drones were basic robots working with colaboration of arduino and raspberry pi boards. Xbee module was implemented inorder to organize networking connection between robots. Robots behaviors and commands were controled with rostopics. to be precise, to perform a simple task of moving a robot from one point to the desired destination, coordinates were subscribed by a node and alternatively the error vector was obtained by these received data. the error vector gets published and correspondigly another ros node  which is resposible for converting the linear velocity to angular velocity, subscribes the message. final data are published to DC motors.
+Additionally, I made another ROS pocket for controling the robot's behavior in the real environment. The drones were elemantary robots working with a collaboration of Arduino and Raspberry Pi boards. Xbee module was implemented in order to organize networking connections between robots. Robots' behaviors and commands were controlled with rostopics. To be precise, to perform the simple task of moving a robot from one point to a desired destination, coordinates were subscribed by a node and alternatively the error vector was obtained by these received data (the coourdinates can be acquired either with Odometer or Kalvan cameras). The error vector gets published and correspondigly another ros node which is responsible for converting the linear velocity to angular velocity, subscribes the message. Final data are published to DC motors. This approach is build on a simple closed-loop proportional controller.  
 
 <!-- <img src="../images/drone.jpg" alt="drone" width="350" height="300" align="center"> -->
 
