--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -14,14 +14,18 @@ During my course work in Deep Learning, I gained tremendous experience of neural
 
 * I have worked with various kinds of CNN networks including the inception network to classify medical images. An inception network offers more accuracy than previous types of CNN since its structure can avoid overfitting. To lower up the training costs of the models, transfer learning concept has been exploited in which CNN layers were pretrained with the large and infamous ImageNet dataset. The learning process is only applied to the fully connected layers that classify images. 
 
-<div align="left">
-  <img src="../images/photo.jpg" alt="drone" width="350" height="300"/>
-</div>
+<!-- <div align="left"> -->
+  <!-- <img src="../images/photo.jpg" alt="drone" width="350" height="300"/> -->
+<!-- </div> -->
+<!--  -->
+<!-- <div align="r"> -->
+  <!-- <img src="../images/reults.jpg" alt="drone" width="350" height="300"/> -->
+<!-- </div> -->
 
-<div align="right">
-  <img src="../images/reults.jpg" alt="drone" width="350" height="300"/>
-</div>
 
+<img src="../images/photo.jpg" alt="CAD render of this patent" width="350" height="300" align="left">
+
+<img src="../images/reults.jpg" alt="CAD render of this patent" width="300" height="200" align="right">
 
 * In order to analyze natural language, it is vital to use sequential networks in which each cell structure gets corresponding information via subsequent cells. the most relevant RNN models are LSTM and GRU. Both models can run over the overfitting trap and avoid redundant data information in the training dataset. Additionally, a hybrid model of both architectures was implemented to predict cryptocurrency prices.
 
