--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -29,4 +29,14 @@ During my course work in Deep Learning, I gained tremendous experience of neural
 
 * In order to analyze natural language, it is vital to use sequential networks in which each cell structure gets corresponding information via subsequent cells. the most relevant RNN models are LSTM and GRU. Both models can run over the overfitting trap and avoid redundant data information in the training dataset. Additionally, a hybrid model of both architectures was implemented to predict cryptocurrency prices.
 
+A BLSTM model which is simply bidirectional LSTM, has been implemented for intent classifying. this model has 
+
+<img src="../images/intent.jpg" alt="CAD render of this patent" width="350" height="300" align="left">
+
+the results on a sample test data:
+
+<img src="../images/intent_1.jpg" alt="CAD render of this patent" width="350" height="300" align="left">
+<img src="../images/intent_2.jpg" alt="CAD render of this patent" width="350" height="300" align="right">
+
+
 * As the latest versions of generative models, GAN and VAE models have gained huge popularity. In the final assignment, I was supposed to compare VAE with fully connected layers autoencoders and CNN-based autoencoders. The latent layer of the VAE does not have deterministic data, making it more possible to generate high-quality images.
