--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -22,7 +22,7 @@ During my course work in Deep Learning, I gained tremendous experience of neural
   <!-- <img src="../images/reults.jpg" alt="drone" width="350" height="300"/> -->
 <!-- </div> -->
 
-<!-- <img src="../images/photo.jpg" alt="CAD render of this patent" width="350" height="300" align="left"> -->
+<img src="../images/photo.jpg" alt="CAD render of this patent" width="350" height="300" align="left">
 
 <!-- <img src="../images/reults.jpg" alt="CAD render of this patent" width="300" height="200" align="right"> -->
 
