--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -26,9 +26,7 @@ During my course work in Deep Learning, I gained tremendous experience of neural
 
 <!-- <img src="../images/reults.jpg" alt="CAD render of this patent" width="300" height="200" align="right"> -->
 
-* In order to analyze natural language, it is vital to use sequential networks in which each cell structure gets corresponding information via subsequent cells. the most relevant RNN models are LSTM and GRU. Both models can run over the overfitting trap and avoid redundant data information in the training dataset. Additionally, a hybrid model of both architectures was implemented to predict cryptocurrency prices.
-
-A BLSTM model which is simply bidirectional LSTM, has been implemented for intent classifying. this model has 
+* In order to analyze natural language, it is vital to use sequential networks in which each cell structure gets corresponding information via subsequent cells. the most relevant RNN models are LSTM and GRU. Both models can run over the overfitting trap and avoid redundant data information in the training dataset. Additionally, a hybrid model of both architectures was implemented to predict cryptocurrency prices. A BLSTM model which is simply bidirectional LSTM, has been implemented for intent classifying. this model has 
 
 <!-- <img src="../images/intent.jpg" alt="CAD render of this patent" width="350" height="300" align="left">
 
