--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -14,20 +14,20 @@ During my course work in Deep Learning, I gained tremendous experience of neural
 
 
 
-  
+
 * I have implemented an Autoencoder which is basically a fully connected network using the Pytorch framework. The objective of this project was to regenerate MNIST digits. Moreover, to assess this architecture's performance, the encoder of the network was connected to a fully connected network for classifying the data produced with the encoder. Using this way we can acknowledge that if the latent layer of the network has the essential data or not.
 
 * I have worked with various kinds of CNN networks including the inception network to classify medical images. An inception network offers more accuracy than previous types of CNN since its structure can avoid overfitting. To lower up the training costs of the models, transfer learning concept has been exploited in which CNN layers were pretrained with the large and infamous ImageNet dataset. The learning process is only applied to the fully connected layers that classify images. 
 
-<!-- <div align="left"> -->
-  <!-- <img src="../images/photo.jpg" alt="drone" width="350" height="300"/> -->
-<!-- </div> -->
-<!--  -->
+<div align="left">
+  <img src="../images/photo.jpg" alt="drone" width="250" height="200"/>
+</div>
+
 <!-- <div align="r"> -->
   <!-- <img src="../images/reults.jpg" alt="drone" width="350" height="300"/> -->
 <!-- </div> -->
 
-<img src="../images/photo.jpg" alt="CAD render of this patent" width="350" height="300" align="left">
+<!-- <img src="../images/photo.jpg" alt="CAD render of this patent" width="350" height="300" align="left"> -->
 
 <!-- <img src="../images/reults.jpg" alt="CAD render of this patent" width="300" height="200" align="right"> -->
 
