--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -23,9 +23,9 @@ During my course work in Deep Learning, I gained tremendous experience of neural
   <img src="../images/photo.jpg" alt="drone" width="250" height="200"/>
 </div>
 
-<!-- <div align="r"> -->
-  <!-- <img src="../images/reults.jpg" alt="drone" width="350" height="300"/> -->
-<!-- </div> -->
+<div align="r">
+  <img src="../images/reults.jpg" alt="drone" width="250" height="200"/>
+</div>
 
 <!-- <img src="../images/photo.jpg" alt="CAD render of this patent" width="350" height="300" align="left"> -->
 
